sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:17: error: ';' expected but 'else' found.
  else i=i+1
  ^